--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   webview_flutter: ^1.0.7
   toast: ^0.1.5
   group_list_view: ^1.0.6
+  fluro: ^1.7.8
   # 上拉加载，下拉刷新
   pull_to_refresh:
     git:
